yamls/traefik/example/traefik-ingressRoute-tls.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-tls
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`192.168.1.96`) 
    kind: Rule
    middlewares:
    - name: traefik-addheader 
    services:
    - name: prometheus-svc
      port: 9090
      kind: Service
      namespace: monitoring
  tls:
    secretName: websecure-tls
