yamls/traefik/example/traefik-ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
          #  - match: Host(`octa8lab.cn`) && PathPrefix(`/tls`)
  - match: Host(`192.168.1.96`)
    kind: Rule
    services:
    - name: grafana-svc
      port: 3000
      kind: Service
      namespace: monitoring
